# framework.security.csr-framework

./: CMakeLists.txt  csr-framework.pc.in
TC/: build.sh  config  funclist.txt  genstub.pl
TC/testcase/: Makefile  tet_captured  tslist  utc_csr_framework.c
doc/: csrfw_TCSImpl_doc.h  csrfw_TWPImpl_doc.h  csrfw_doc.h
framework/: TCSErrorCodes.h  TCSImpl.c  TCSImpl.h  TWPImpl.c  TWPImpl.h
packaging/: csr-framework.spec
test/: TCSTest.c  TCSTest.h  TCSTestUtils.c  TWPTest.c  TWPTest.h  TWPTestUtils.c  UrlInfo.h  XMPHttp.c  cmdscan.c  leaktest.c
test/db/nWdvlX6me3/: kavheur.kdl  mmh001.kdc  mmh002.kdc  mmhlnk01.kdc  tmh001.kdc  tmheur.mft  tmhlnk01.kdc
test/scripts/: Test.sh  WPTest.sh
test/testcontents/nWdvlX6me3/: tcs-testfile-0.buf  tcs-testfile-0.email  tcs-testfile-0.html  tcs-testfile-0.js  tcs-testfile-0.multiple  tcs-testfile-0.phone  tcs-testfile-0.txt  tcs-testfile-0.url  tcs-testfile-0.z  tcs-testfile-1.email  tcs-testfile-1.html  tcs-testfile-1.js  tcs-testfile-1.multiple  tcs-testfile-1.phone  tcs-testfile-1.txt  tcs-testfile-1.url  tcs-testfile-1.z
